BUGFIX. Cannot drag to scroll over the months
Error:
- The CSS properties `scroll-snap-type: x mandatory` and `scroll-snap-align: center` are being used to control horizontal scrolling in a container that displays the months sequentially, ensuring that they do not appear in the middle of the screen. However, these properties are causing a problem with scrolling, as it is only possible to view the months by dragging a scroll bar, which is too small in the mobile version to accurately touch with a finger.

Solution:
- For the time being, avoid using these properties.
Remove the CSS properties `scroll-snap-type: x mandatory` and `scroll-snap-align: center` from the sass mixin `perfectScrollbar`.

References:
- https://alvarotrigo.com/blog/why-not-to-use-css-scroll-snap/
- https://midu.dev/css-scroll-snap-la-solucion-definitiva-a-la-creacion-de-sliders-en-la-web/
- https://css-tricks.com/practical-css-scroll-snapping/
- https://web.dev/css-scroll-snap/

--- a/src/sass/abstracts/tools/_tools-scrollbar.sass
+++ b/src/sass/abstracts/tools/_tools-scrollbar.sass
@@ -63,11 +63,7 @@
 			padding-bottom: $size
 			overflow-y: hidden
 			overflow-x: auto
-			scroll-snap-type: x mandatory
 			transition: scroll-left 1s ease-out
-
-			> *:not([class^="ps__"])
-				scroll-snap-align: center
 
 			.ps__rail-x,
 			.ps__thumb-x
@@ -77,11 +73,7 @@
 			padding-right: $size
 			overflow-x: hidden
 			overflow-y: auto
-			scroll-snap-type: y mandatory
 			transition: scroll-top 1s ease-out
-
-			> *:not([class^="ps__"])
-				scroll-snap-align: start
 
 			.ps__rail-y,
 			.ps__thumb-y
